Add some more exports